option java_package = "com.hawk.game.protocol";

// struct -------------------------------------------------------

message SynPlayerAttr
{
	// 等级
	optional int32 level = 1;
	// 经验
	optional int32 exp = 2;
	// 钻石
	optional int32 gold = 3;
	// 金币
	optional int64 coin = 4;
	// 通天塔币
	optional int32 towerCoin = 5;
	// 公会币
	optional int32 contribution = 6;
	// 荣誉点
	optional int32 honor = 7;
	// 活力值
	optional int32 fatigue = 8;
	// 正在累计活力值恢复时间开始时间戳（秒）
	optional int32 fatigueBeginTime = 9;
}

message PlayerInfo
{
	required int32  playerId = 1;
	required string nickname = 2;
	required int32  portraitId = 3;
	required int32  level = 4;
	required int32  exp = 5;
	required int32  gold = 6;
	required int64  coin = 7;
	required int32  towerCoin = 8;
	required int32  honor = 9;
	required int32  recharge = 10;
	required int32  vipLevel = 11;
}

// protocol-----------------------------------------------------

// PLAYER_INFO_SYNC_S
message HSPlayerInfoSync
{
	required PlayerInfo info = 1;
}

// ASSEMBLE_FINISH_S
message HSAssembleFinish
{
	required int32 playerId = 1;
	
	required int32 allianceId = 2;
	required int32 contribution = 3;
}

// PLAYER_COMPLETE_C
message HSPlayerComplete
{
	required string nickname = 1;
	optional int32 portraitId = 2;
}

// PLAYER_COMPLETE_S
message HSPlayerCompleteRet
{
}
